--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <img src = "gato1.jfif"/>
             <img src = "gato2.jfif"/>
             <img src = "gato3.jfif"/>
+            <img src = "gato4.jfif"/>
         </div>
     </body>
 </html>
